i added a little info in About page and considered several color gradients for my background

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
   padding: 6px 8px 6px 16px;
   text-decoration: none;
   font-size: 23px;
-  color: goldenrod;
+  color: #daa520;
   display: block;
 }
 .sidenav a:hover {
