--- a/style.css
+++ b/style.css
@@ -2,9 +2,10 @@
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: center;
   width: 200px;
-  position: absolute;
-  left:58%;
+  position: relative;
+  left:57%;
   margin-left: -100px;
+  color: #daa520;
 }
 .sidenav {
   height: 100%;
@@ -30,4 +31,21 @@
 .main {
   margin-left: 160px; 
   padding: 0px 10px;
+}
+@media (max-width: 768px) {
+  [class*="yes"] {
+    left:60%;
+  }
+}
+body {
+  background-color:  rgb(53, 71, 153);
+  }
+
+.ok {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  position: absolute;
+  left: 32%;
 }
